--- a/requirements.txt
+++ b/requirements.txt
@@ -10,17 +10,14 @@ bs4==0.0.1
 certifi==2018.1.18
 chardet==3.0.4
 click==6.7
-cloud-init==19.1
 colorama==0.3.7
-command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
-cryptography==2.1.4
+cryptography>=2.3
 cssselect==1.1.0
 cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
-distro-info===0.18ubuntu0.18.04.1
 entrypoints==0.3
 httplib2==0.9.2
 hyperlink==17.3.1
@@ -43,7 +40,6 @@ jupyterlab-server==1.0.6
 keyring==10.6.0
 keyrings.alt==3.0
 kiwisolver==1.1.0
-language-selector==0.1
 lazy-object-proxy==1.4.2
 lxml==4.4.1
 MarkupSafe==1.1.1
@@ -57,7 +53,6 @@ nltk==3.4.5
 notebook==6.0.1
 numpy==1.17.2
 oauthlib==2.0.6
-PAM==0.4.2
 pandas==0.25.1
 pandocfilters==1.4.2
 parso==0.5.1
@@ -68,40 +63,33 @@ prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
-pycrypto==2.6.1
 Pygments==2.4.2
-pygobject==3.26.1
 PyJWT==1.5.3
 pylint==2.3.1
 pyOpenSSL==17.5.0
 pyparsing==2.4.2
 pyrsistent==0.15.4
 pyserial==3.4
-python-apt==1.6.4
 python-dateutil==2.8.0
 python-debian==0.1.32
 pytz==2019.2
-pyxdg==0.25
-PyYAML==3.12
+pyxdg>=0.26
+pyyaml>=4.2b1
 pyzmq==18.1.0
-requests==2.18.4
+requests>=2.20.0
 requests-unixsocket==0.1.5
 SecretStorage==2.3.1
 Send2Trash==1.5.0
 service-identity==16.0.0
 six==1.12.0
 soupsieve==1.9.3
-ssh-import-id==5.7
-systemd-python==234
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
 traitlets==4.3.2
-Twisted==17.9.0
+twisted>=19.7.0
 typed-ast==1.4.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.22
+urllib3>=1.24.2
 wcwidth==0.1.7
 webencodings==0.5.1
 wrapt==1.11.2
